# cellsparse-api

./: .gitignore  README.md  pyproject.toml
src/cellsparse_api/: __init__.py  main.py  utils.py
src/cellsparse_api/routers/: cellpose_router.py  elephant_router.py  stardist_router.py
