[tool.poetry]
name = "cellsparse-api"
version = "0.1.0"
description = ""
authors = ["Ko Sugawara <ko.sugawara@ens-lyon.fr>"]
readme = "README.md"
packages = [{include = "cellsparse_api", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = {extras = ["all"], version = "^0.96.0"}
cellsparse = {git = "https://github.com/ksugar/cellsparse-core.git"}
geojson = "^3.0.1"
shapely = "^2.0.1"
tensorflow = {version = "2.12.0", optional = true}
tensorflow-macos = {version = "2.12.0", optional = true}
tensorflow-metal = {version = "^1.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[tool.poetry.extras]
tensorflow = ["tensorflow"]
tensorflow-macos = ["tensorflow-macos", "tensorflow-metal"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
